# evol-headers

./: README.md  defines.h  ev_hash.h  ev_helpers.h  ev_internal.h  ev_limits.h  ev_log.h  ev_macros.h  ev_map.h  ev_numeric.h  ev_str.h  ev_types.h  ev_vec.h  log_test.c  map_test.c  memory_tracking.h  meson-native-clang  meson.build  str_test.c  tostr_test.c
build_options/: meson-clang-linux  meson-clang-win
buildfiles/: ev_helpers.c  ev_log.c  ev_str.c  ev_vec.c
